Update babel.config.js and jest.config.ts; install dependencies

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "babel-plugin-relay": "^14.1.0",
     "babel-preset-expo": "~9.2.0",
     "detox": "19.12.1",
     "eas-cli": "2.1.0",
@@ -55,6 +56,7 @@
     "jest-circus": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-expo": "46.0.1",
+    "metro-babel-register": "^0.72.0",
     "metro-resolver": "0.72.2",
     "nx": "14.8.6",
     "prettier": "^2.6.2",
