--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "1.0.0",
     "react-native-web": "~0.18.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "expo-notifications": "~0.16.1"
   },
   "devDependencies": {
     "@nrwl/cli": "14.8.6",
