chore: [nx migration] 15.0.0-prefix-outputs

--- a/apps/jest-expo-reproduce/project.json
+++ b/apps/jest-expo-reproduce/project.json
@@ -98,7 +98,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/jest-expo-reproduce"],
+      "outputs": ["{workspaceRoot}/coverage/apps/jest-expo-reproduce"],
       "options": {
         "jestConfig": "apps/jest-expo-reproduce/jest.config.ts",
         "passWithNoTests": true
