--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "private": true,
   "dependencies": {
     "@expo/metro-config": "0.5.2",
+    "@expo/webpack-config": "0.17.4",
     "expo": "47.0.13",
+    "expo-notifications": "~0.16.1",
     "expo-splash-screen": "0.17.5",
     "expo-status-bar": "~1.4.0",
     "react": "18.2.0",
@@ -19,16 +21,16 @@
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "1.0.0",
     "react-native-web": "0.18.12",
-    "tslib": "^2.3.0",
-    "expo-notifications": "~0.16.1",
-    "@expo/webpack-config": "0.17.4"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@expo/cli": "0.3.2",
     "@nrwl/cli": "15.6.3",
     "@nrwl/detox": "15.6.3",
     "@nrwl/eslint-plugin-nx": "15.6.3",
     "@nrwl/expo": "15.6.3",
     "@nrwl/jest": "15.6.3",
+    "@nrwl/js": "15.6.3",
     "@nrwl/linter": "15.6.3",
     "@nrwl/web": "15.6.3",
     "@nrwl/workspace": "15.6.3",
@@ -64,7 +66,6 @@
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2",
-    "@expo/cli": "0.3.2"
+    "typescript": "~4.8.2"
   }
 }
