regen project & diff compare

--- a/apps/jest-expo-reproduce/.eslintrc.json
+++ b/apps/jest-expo-reproduce/.eslintrc.json
@@ -1,12 +1,10 @@
 {
   "extends": ["plugin:@nrwl/nx/react", "../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*", ".expo", "node_modules", "web-build"],
+  "ignorePatterns": ["!**/*", ".expo", "node_modules", "web-build", "cache"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {
-        "@typescript-eslint/ban-ts-comment": "off"
-      }
+      "rules": {}
     },
     {
       "files": ["*.ts", "*.tsx"],
