--- a/apps/jest-expo-reproduce/project.json
+++ b/apps/jest-expo-reproduce/project.json
@@ -85,6 +85,10 @@
       "executor": "@nrwl/expo:rollback",
       "options": {}
     },
+    "prebuild": {
+      "executor": "@nrwl/expo:prebuild",
+      "options": {}
+    },
     "eject": {
       "executor": "nx:run-commands",
       "options": {
@@ -100,15 +104,17 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/apps/jest-expo-reproduce"],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/jest-expo-reproduce/jest.config.ts",
         "passWithNoTests": true
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
       }
-    },
-    "prebuild": {
-      "executor": "@nrwl/expo:prebuild",
-      "options": {}
     },
     "install": {
       "executor": "@nrwl/expo:install",
